@@ -1,6 +1,9 @@
 2010-03-13  6.6.0-6 Cristy  <quetzlzacatenango@image...>
   * Add support for the Adobe Large Document format.
   * Recognize -remap option for the mogrify utility.
+  * The default Helvetica font is not always available, check for
+    Century Schoolbook too (reference
+    http://www.imagemagick.org/discourse-server/viewtopic.php?f=2&t=15780).
 
 2010-03-11  6.6.0-5 Cristy  <quetzlzacatenango@image...>
   * Permit user to get virtual pixels with a region width of 0.
